<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context="com.weeravit_it.findjob.findjob.fragment.JobDetailFragment">

    <LinearLayout
        android:id="@+id/linearLayoutTabOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.joanzapata.iconify.widget.IconTextView
                android:id="@+id/iconFavorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/font_favorite"
                android:textColor="@color/pink_500"
                android:textSize="56sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/space.white"
                android:text="@string/favorite" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.joanzapata.iconify.widget.IconTextView
                android:id="@+id/iconResume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/font_resume"
                android:textColor="@color/indigo_500"
                android:textSize="48sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/space.white"
                android:text="@string/resume" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutNavigator"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.joanzapata.iconify.widget.IconTextView
                android:id="@+id/iconNavigator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/font_navigator"
                android:textColor="@color/teal_500"
                android:textSize="62sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/space.white"
                android:text="@string/navigator" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <com.joanzapata.iconify.widget.IconTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notice.with.icon"
            android:textSize="@dimen/text.bigSize" />

        <TextView
            android:id="@+id/tvNotice"
            style="@style/Text.JobDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notice" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <com.joanzapata.iconify.widget.IconTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/job.with.icon"
            android:textSize="@dimen/text.bigSize" />

        <TextView
            android:id="@+id/tvJob"
            style="@style/Text.JobDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/job" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <com.joanzapata.iconify.widget.IconTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description.with.icon"
            android:textSize="@dimen/text.bigSize" />

        <TextView
            android:id="@+id/tvDescription"
            style="@style/Text.JobDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <com.joanzapata.iconify.widget.IconTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/qualification.with.icon"
            android:textSize="@dimen/text.bigSize" />

        <TextView
            android:id="@+id/tvRequirement"
            style="@style/Text.JobDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/qualification" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <com.joanzapata.iconify.widget.IconTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welfare.with.icon"
            android:textSize="@dimen/text.bigSize" />

        <TextView
            android:id="@+id/tvWelfare"
            style="@style/Text.JobDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welfare" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <com.joanzapata.iconify.widget.IconTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/salary.with.icon"
            android:textSize="@dimen/text.bigSize" />

        <TextView
            android:id="@+id/tvSalary"
            style="@style/Text.JobDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/salary" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <com.joanzapata.iconify.widget.IconTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address.with.icon"
            android:textSize="@dimen/text.bigSize" />

        <TextView
            android:id="@+id/tvAddress"
            style="@style/Text.JobDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address" />

    </LinearLayout>

</LinearLayout>

